# gcp-python-api-performance

./: .gitignore  README.md  pyproject.toml
0__generate_fake_data/: main.py
1__basic_api/: Dockerfile  deploy.sh  locustfile.py  pyproject.toml
1__basic_api/app/: main.py
